# functor

./: CMakeLists.txt  cmake-build.bat  functor.cpp
